--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "Lambda Function to generate pre-signed S3 URL for videos upload",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --configs=.mocharc.json",
+    "start:local": "AWS_REGION=us-east-1 BUCKET_NAME=hackathon-fiap LOCALSTACK_ENDPOINT=http://s3.us-east-1.localhost.localstack.cloud:4566 tsx index.ts",
+    "build": "tsc",
+    "coverage": "nyc --reporter=text --reporter=lcov npm run test"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/FIAP-8SOAT-G6/hackathon-upload-api.git"
   },
+  "files": [
+    "dist/*"
+  ],
   "keywords": [
     "lambda",
     "nodejs",
@@ -24,10 +30,25 @@
   "homepage": "https://github.com/FIAP-8SOAT-G6/hackathon-upload-api#readme",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.777.0",
+    "@aws-sdk/s3-presigned-post": "^3.782.0",
     "@aws-sdk/s3-request-presigner": "^3.777.0",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@types/node": "^22.13.14"
+    "@types/aws-lambda": "^8.10.148",
+    "@types/chai": "^4.3.20",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^22.13.14",
+    "@types/sinon": "^17.0.4",
+    "@types/uuid": "^10.0.0",
+    "chai": "^4.5.0",
+    "chai-as-promised": "^7.1.2",
+    "esbuild": "0.25.2",
+    "esbuild-plugin-tsc": "^0.5.0",
+    "mocha": "^11.1.0",
+    "nyc": "^17.1.0",
+    "sinon": "^20.0.0",
+    "tsx": "^4.19.3"
   }
 }
