--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Set Up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Docker Setup Compose
+        uses: docker/setup-compose-action@v1.2.0
+
       - name: Run Integration Tests with Docker Compose
         run: |
           docker-compose -f docker-compose.test.yaml up --build --abort-on-container-exit --exit-code-from api
