--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -1,6 +1,8 @@
 services:
   localstack:
-    image: localstack/localstack:s3-latest
+    build:
+      context: ./localstack
+      dockerfile: localstack.Dockerfile
     container_name: localstack
     ports:
       - "4566:4566"
@@ -10,7 +12,6 @@ services:
       - AWS_DEFAULT_REGION=us-east-1
     volumes:
       - localstack_data:/var/lib/localstack
-      - ./scripts/init-s3.sh:/etc/localstack/init.d/ready.d/init-s3.sh
 
   api:
     build:
