--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,15 +28,6 @@ jobs:
       - name: Build Project
         run: npm run build --if-present
 
-      - name: Tests & Coverage
-        run: npm run coverage
-
-      - name: SonarQube Scan
-        uses: SonarSource/sonarcloud-github-action@v4
-        env: 
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
   test:
     name: Integration Tests
     needs: build
@@ -47,12 +38,15 @@ jobs:
       - name: Set Up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Docker Setup Compose
+        uses: docker/setup-compose-action@v1.2.0
+
       - name: Run Integration Tests with Docker Compose
         run: |
-          docker-compose -f docker-compose.test.yaml up --build --abort-on-container-exit --exit-code-from api
+          docker compose -f docker-compose.test.yaml up --build --abort-on-container-exit --exit-code-from api
 
       - name: SonarQube Scan
-        uses: SonarSource/sonarcloud-github-action@v4
+        uses: SonarSource/sonarcloud-github-action@v5
         env: 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
