chore: setup terraform on pipeline

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -31,6 +31,9 @@ jobs:
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
           aws-region: ${{ env.AWS_REGION_DEFAULT }}
 
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+
       - name: Terraform ECR
         working-directory: infrastructure/ecr
         run: |
