--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -7,7 +7,8 @@ on:
 
 env:
   AWS_REGION_DEFAULT: us-east-1
-  AWS_ECR_REPOSITORY: video-processor-hackathon/api
+  AWS_UPLOAD_API_ECR_REPOSITORY: video-processor-hackathon/upload-api
+  AWS_LIST_PROCESSING_STATUS_API_ECR_REPOSITORY: video-processor-hackathon/list-processing-status
   AWS_LAMBDA_FUNCTION_NAME: GetPresignedUrl
   IMAGE_TAG: ${{ github.sha }}
 
@@ -39,20 +40,30 @@ jobs:
         run: |
           terraform init
           terraform apply -auto-approve
-      
+
       - name: Log in to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build Docker image
+      - name: Build Docker image - GetPresignedURL
         run: |
-          IMAGE_URI="${{ steps.login-ecr.outputs.registry }}/${{ env.AWS_ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}"
-          docker build -t "$IMAGE_URI" .
-          echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
+          IMAGE_URI_GET_PRESIGNED_URL="${{ steps.login-ecr.outputs.registry }}/${{ env.AWS_UPLOAD_API_ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}"
+          docker build -t "$IMAGE_URI_GET_PRESIGNED_URL" -f Dockerfile.getPresignedUrl .
+          echo "IMAGE_URI_GET_PRESIGNED_URL=$IMAGE_URI_GET_PRESIGNED_URL" >> $GITHUB_ENV
 
-      - name: Push image to ECR
+      - name: Push image to ECR - GetPresignedURL
         run: |
-          docker push "$IMAGE_URI"
+          docker push "$IMAGE_URI_GET_PRESIGNED_URL"
+
+      - name: Build Docker image - ListProcessingStatus
+        run: |
+          IMAGE_URI_LIST_PROCESSING_STATUS="${{ steps.login-ecr.outputs.registry }}/${{ env.AWS_LIST_PROCESSING_STATUS_API_ECR_REPOSITORY }}${{ env.IMAGE_TAG }}"
+          docker build -t "$IMAGE_URI_LIST_PROCESSING_STATUS" -f Dockerfile.listProcessingStatus .
+          echo "IMAGE_URI_LIST_PROCESSING_STATUS=$IMAGE_URI_LIST_PROCESSING_STATUS" >> $GITHUB_ENV
+
+      - name: Push image to ECR - ListProcessingStatus
+        run: |
+          docker push "$IMAGE_URI_LIST_PROCESSING_STATUS"
 
       - name: Terraform Init and Apply for Lambda + API Gateway
         working-directory: infrastructure/lambda
