--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@aws-sdk/client-s3": "^3.777.0",
     "@aws-sdk/s3-presigned-post": "^3.782.0",
     "@aws-sdk/s3-request-presigner": "^3.777.0",
+    "@sendgrid/mail": "^8.1.5",
     "typescript": "^5.8.2",
     "uuid": "^11.1.0"
   },
